Actualizar readme
Actualizar readme en español y final gracias a claude <3